--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -93,11 +93,35 @@
               :field_class:
                 :type: string
                 :cast_type: const char*
-      - :name: lttng:frequency 
+  - :name: interval_sampling
+    :event_common_context_field_class:
+      :type: structure
+      :members:
+        - :name: hostname
+          :field_class:
+            :type: string
+            :cast_type: const char*
+        - :name: ts
+          :field_class:
+            :type: integer_signed
+            :field_value_range: 64
+            :cast_type: int64_t
+    :event_classes:
+      - :name: sampling:frequency
         :payload_field_class:
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hFrequency
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
@@ -112,11 +136,21 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
-      - :name: lttng:power 
+      - :name: sampling:power
         :payload_field_class:
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hPower
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
@@ -131,11 +165,21 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
-      - :name: lttng:computeEU
+      - :name: sampling:computeEU
         :payload_field_class:
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hEngine
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
@@ -149,11 +193,21 @@
               :field_class:
                 :type: single
                 :cast_type: float
-      - :name: lttng:copyEU
+      - :name: sampling:copyEU
         :payload_field_class:
           :type: structure
           :members:
             - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hEngine
               :field_class:
                 :type: integer_unsigned
                 :field_value_range: 64
@@ -166,4 +220,94 @@
             - :name: activeTime
               :field_class:
                 :type: single
+                :cast_type: float
+      - :name: sampling:fabricPort
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hFabricPort
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: subDevice
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: portId
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: remotePortId
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: rxThroughput
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: txThroughput
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: rxSpeed
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: txSpeed
+              :field_class:
+                :type: double
+                :cast_type: float
+      - :name: sampling:memModule
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hMemModule
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: subDevice
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: pBandwidth
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: rdBandwidth
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: wtBandwidth
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: occupancy
+              :field_class:
+                :type: double
                 :cast_type: float
