--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -749,8 +749,7 @@ def trace_and_on_node_processing(usr_argv)
       LOGGER.debug("Waiting for babeltrace_thapi and dirwatch (#{pids}) to finish")
       pids.each do |pid|
         Process.wait(pid)
-        XprofExitCode.update($?.exitstatus) 
-        Logger.warn("#{pid} failed") unless $?.success?
+        XprofExitCode.update($?.exitstatus, "babeltrace_thapi or dirwatch #{pid}")
       end
     end
     # we can kill the session daemon
